# StellariumMoonAvoidance

./: .cursorrules  .gitignore  CMakeLists.txt  COMPARISON_WITH_NINA.md  MoonAvoidance.cpp  MoonAvoidance.hpp  MoonAvoidanceConfig.cpp  MoonAvoidanceConfig.hpp  MoonAvoidanceDialog.cpp  MoonAvoidanceDialog.hpp  MoonAvoidancePluginInterface.cpp  MoonAvoidancePluginInterface.hpp  PLAN.md  README.md  build.ps1  build.sh  install.bat  instructions.md  plugin.ini  qt_version.conf  read_excel.py
.github/workflows/: windows-build.yml
ci/: resolve_stellarium_compat.py  stellarium-compat.yml
tests/: CMakeLists.txt  testMoonAvoidance.cpp  testMoonAvoidanceConfig.cpp
